--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #fff; /* White background */
+            background: #fff;
             font-family: 'Arial', sans-serif;
-            color: #000; /* Black text */
+            color: #000;
             overflow: hidden;
         }
 
@@ -23,7 +23,7 @@
         }
 
         .album-cover {
-            width: 300px; /* Adjust size as needed */
+            width: 300px;
             height: auto;
             margin-bottom: 20px;
         }
@@ -33,13 +33,13 @@
             font-weight: 700;
             letter-spacing: -2px;
             margin: 20px 0;
-            color: #000; /* Black text */
+            color: #000;
         }
 
         .countdown span {
             font-size: 1rem;
             letter-spacing: normal;
-            color: #555; /* Gray for smaller text */
+            color: #555;
             display: block;
             margin-top: -10px;
         }
@@ -52,7 +52,6 @@
 </head>
 <body>
     <div class="container">
-        <!-- Replace 'placeholder.jpg' with your album cover image -->
         <img src="IAM.jpg" alt="I AM MUSIC Album Cover" class="album-cover">
 
         <div class="countdown" id="countdown">
